# SchoolProjects

./: README.md  diff  test.c
FI MUNI 1st year 2018-2019/: README.md
FI MUNI 1st year 2018-2019/IB002 - Algorithms - mini python exam/: du02_circularlist.py  du06_canonical_heap.py  du12_graph_relation.py
FI MUNI 1st year 2018-2019/IB111_PythonProgramming/: SchoolExam.py  hw01_basicPython.py  hw04_FamilyTreeBuilder.py  hw05_FindRhymes_TransformImage.py
FIT VUT 2019-2021/IAL - Algorithms/: README.md  c016.c  c206.c  c402.c
FIT VUT 2019-2021/IDS - Database Systems/: xbobol00_xsysel09.sql
FIT VUT 2019-2021/IFJ - Formal Languages and Compilers/Code/: CMakeLists.txt  Makefile  codegen.h  parser.h  precedence.c  return-codes.h  rozdeleni  scanner.h  symtable.c  symtablestack.h  testData.h  token_stack.h
FIT VUT 2019-2021/IIS - Information Systems/: README.md
FIT VUT 2019-2021/IJA/: main.java
FIT VUT 2019-2021/IMP - Microprocessors and Embedded Systems/: README.md
FIT VUT 2019-2021/IPK - Computer Communications and Networks/: fileget.py  popis.txt
FIT VUT 2019-2021/IPP - Principles of Programming Languages/: interpret.py  test.php
FIT VUT 2019-2021/IZU - Fundamentals of Artificial Intelligence/: xbobol00-zadani21.pl
IAL - Algorithms/: c401.c
IB002 - Algorithms - mini python exam/: du01_linkedlist.py
IB111_PythonProgramming/: hw02_BlackJack_game.py
IFJ - Formal Languages and Compilers/Code/: codegen.c  symstack.h  symtable.h  (+1 more)
INC - Digital Systems Design/: zadani_kod.txt
IPP/: parser.php
IZG - Computer Graphics Principles/: gpu.cpp
test/: main.c
(+157 files in other folders)
